Update API Coinmarketcap Extraction Project.ipynb

--- a/API Coinmarketcap Extraction Project.ipynb
+++ b/API Coinmarketcap Extraction Project.ipynb
@@ -21,7 +21,7 @@
     "}\n",
     "headers = {\n",
     "  'Accepts': 'application/json',\n",
-    "  'X-CMC_PRO_API_KEY': '639f7cca301840d584c93fe3387437b7',\n",
+    "  'X-CMC_PRO_API_KEY': 'your_key_here',\n",
     "}\n",
     "\n",
     "session = Session()\n",
